# sadsadsad

./: .gitignore  BUILD.md  README.md  pyproject.toml
.github/workflows/: build.yml
roastme/: __init__.py  config.py
roastme/analyzer/: __init__.py  engine.py
roastme/cli/: __init__.py  main.py
roastme/personas/: __init__.py  base.py
roastme/reviewer/: __init__.py  engine.py
roastme/web/: __init__.py  app.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
tests/: test_analyzer.py  test_config.py  test_personas.py
web/: index.html  package.json
web/src/: App.jsx  styles.css
web/src/components/: FileDropZone.jsx  PersonaSelector.jsx  ResultsPanel.jsx  SettingsModal.jsx
