[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roastme"
version = "0.1.0"
description = "AI code reviewer that absolutely roasts your code"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "openai>=1.14",
    "rich>=13.7",
    "click>=8.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.9"]

[project.scripts]
roastme = "roastme.cli.main:cli"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
